@@ -2,6 +2,8 @@
 	  add missing default behaviour for geolocation
 	Update supersearch help text URL.
 	Add nofollow to robots meta tag.
+        Added new CSS class "node_name" for inline non-hyperlink references
+         to node names - see README.CSS for details.
 	
 0.45	1 December 2004
         Made the geolocation stuff work worldwide.  Squeeeeeee!
